src/pursuit/log/build_2022-12-19_21-33-04/pursuit/stderr.log
  File "/home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit/pure_pursuit.py", line 18
    for line in f.readlines()
                            ^
SyntaxError: invalid syntax

